unpackaged/main/default/objects/Controle__c/Controle__c.object-meta.xml
<CustomObject>
    <description>Les contrôles</description>
    <label>Contrôle</label>
    <nameField>
        <displayFormat>CTRL-{00000}</displayFormat>
        <label>N° Contrôle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrôles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>