unpackaged/main/default/objects/Controle__c/fields/Concerned__c.field-meta.xml
<CustomField>
    <fullName>Concerned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerné</label>
    <type>Checkbox</type>
</CustomField>