unpackaged/main/default/objects/Controle__c/fields/Expiration_precedente__c.field-meta.xml
<CustomField>
    <fullName>Expiration_precedente__c</fullName>
    <label>Expiration précédente</label>
    <type>Date</type>
</CustomField>