unpackaged/main/default/objects/Controle__c/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <label>Filename</label>
    <type>Url</type>
</CustomField>