unpackaged/main/default/objects/Controle__c/fields/Fin_2eme_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Fin_2eme_trimestre__c</fullName>
    <formula>DATE(year(TODAY()) ,6,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fin 2eme trimestre</label>
    <type>Date</type>
</CustomField>