unpackaged/main/default/objects/Controle__c/fields/Fin_3eme_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Fin_3eme_trimestre__c</fullName>
    <formula>DATE(year(TODAY()) ,9,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fin 3eme trimestre</label>
    <type>Date</type>
</CustomField>