unpackaged/main/default/objects/Controle__c/fields/Fin_4eme_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Fin_4eme_trimestre__c</fullName>
    <formula>DATE(year(TODAY()) ,12,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fin 4eme trimestre</label>
    <type>Date</type>
</CustomField>