unpackaged/main/default/objects/Controle__c/fields/FIN_DE_MOIS__c.field-meta.xml
<CustomField>
    <fullName>FIN_DE_MOIS__c</fullName>
    <formula>DATE(year(TODAY()) ,10,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FIN_DE_MOIS</label>
    <type>Date</type>
</CustomField>