unpackaged/main/default/objects/Controle__c/fields/KPI_Cont_2eme_trimestre__c.field-meta.xml
<CustomField>
    <fullName>KPI_Cont_2eme_trimestre__c</fullName>
    <formula>IF( Prochaine_operation__c &gt;  Fin_2eme_trimestre__c  , 1 , 0)</formula>
    <label>KPI_Cont_2eme trimestre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>