unpackaged/main/default/objects/Controle__c/fields/Nom_parc__c.field-meta.xml
<CustomField>
    <fullName>Nom_parc__c</fullName>
    <formula>Parc__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom parc</label>
    <type>Text</type>
</CustomField>