unpackaged/main/default/objects/Controle__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Opération</label>
    <length>255</length>
    <type>Text</type>
</CustomField>