unpackaged/main/default/objects/Controle__c/fields/Prochaine_operation__c.field-meta.xml
<CustomField>
    <fullName>Prochaine_operation__c</fullName>
    <label>Prochaine opération</label>
    <type>Date</type>
</CustomField>