unpackaged/main/default/objects/Controle__c/fields/TECH_PF_CONTROLES_MES_AGENCES__c.field-meta.xml
<CustomField>
    <fullName>TECH_PF_CONTROLES_MES_AGENCES__c</fullName>
    <formula>IF
(
 
AND( contains($User.Liste_Agences__c,  Parc__r.Agence__r.Code__c ) ,NOT(ISBLANK($User.Liste_Agences__c)),NOT(ISBLANK(Parc__r.Agence__r.Code__c)))

,
TRUE
,
FALSE
)</formula>
    <label>TECH_PF_CONTROLES_MES_AGENCES</label>
    <type>Checkbox</type>
</CustomField>