unpackaged/main/default/objects/Controle__c/recordTypes/Controle.recordType-meta.xml
<RecordType>
    <fullName>Controle</fullName>
    <active>true</active>
    <label>Contrôle</label>
</RecordType>