unpackaged/main/default/objects/Controle__c/listViews/Contr_les_techniques.listView-meta.xml
<ListView>
    <fullName>Contr_les_techniques</fullName>
    <columns>Parc__c</columns>
    <columns>Operation__c</columns>
    <columns>Prochaine_operation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_PF_CONTROLES_MES_AGENCES__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Operation__c</field>
        <operation>equals</operation>
        <value>CT</value>
    </filters>
    <label>Contrôles techniques</label>
</ListView>