unpackaged/main/default/objects/Controle__c/listViews/Non_roulants.listView-meta.xml
<ListView>
    <fullName>Non_roulants</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Non roulants</label>
</ListView>